--- a/package.json
+++ b/package.json
@@ -14,17 +14,22 @@
   "dependencies": {
     "@babel/core": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
+    "axios": "^0.19.2",
     "babel-loader": "^8.1.0",
     "bulma": "^0.8.2",
+    "css-loader": "^3.5.3",
     "express": "^4.17.1",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
+    "sqlite3": "^4.2.0",
+    "style-loader": "^1.2.1",
     "vue": "^2.6.11",
     "vue-loader": "^15.9.2",
     "vue-router": "^3.1.6",
     "vue-template-compiler": "^2.6.11",
     "vuex": "^3.4.0",
     "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "xml2js": "^0.4.23"
   }
 }
